search icon alignment fix

--- a/a91/src/Style/SelectAgent.css
+++ b/a91/src/Style/SelectAgent.css
@@ -1,6 +1,6 @@
 .select-search-div {
   width: 30%;
-  height: 40px;
+  height: 50px;
   display: flex;
   margin: auto;
   justify-content: space-between;
